@@ -1,3 +1,8 @@
+2019-11-13  Marek Polacek  <polacek@redhat.com>
+
+	PR c++/89070 - bogus [[nodiscard]] warning in SFINAE.
+	* g++.dg/cpp1z/nodiscard7.C: New test.
+
 2019-11-13  Joseph Myers  <joseph@codesourcery.com>
 
 	* gcc.dg/c11-float-3.c, gcc.dg/c2x-float-1.c: New tests.
